--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,7 @@ a {
   font-size: 20px;
   letter-spacing: 0.1em;
   text-transform: capitalize;
+  cursor: pointer;
 }
 .btn:hover {
   background-color: #93c572;
@@ -2148,6 +2149,10 @@ a {
   font-size: 16px;
 }
 
+.custom-option .wpcf7-not-valid-tip {
+  display: none;
+}
+
 .contact-thanks__container {
   text-align: center;
 }
@@ -2183,6 +2188,10 @@ a {
   .contact-thanks__submit {
     margin-top: 28px;
   }
+}
+
+.grecaptcha-badge {
+  visibility: hidden;
 }
 
 .footer {
