--- a/scss/component/_btn.scss
+++ b/scss/component/_btn.scss
@@ -13,6 +13,7 @@
   font-size: 20px;
   letter-spacing: 0.1em;
   text-transform: capitalize;
+  cursor: pointer;
   &:hover {
     background-color: $primary;
     color: #fff;
