--- a/scss/layout/_contact.scss
+++ b/scss/layout/_contact.scss
@@ -136,6 +136,9 @@
   line-height: 50px;
   font-size: 16px;
 }
+.custom-option .wpcf7-not-valid-tip {
+  display: none;
+}
 .contact-thanks__container {
   text-align: center;
 }
@@ -162,4 +165,7 @@
   @include mq(sp) {
     margin-top: 28px;
   }
+}
+.grecaptcha-badge {
+  visibility: hidden;
 }
