--- a/scss/layout/_archive.scss
+++ b/scss/layout/_archive.scss
@@ -8,7 +8,7 @@
   overflow-x: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
-  padding: 0 10px 50px 0;
+  padding: 0 15px 50px 15px;
   &::-webkit-scrollbar {
     display: none;
   }
