--- a/scss/component/_btn.scss
+++ b/scss/component/_btn.scss
@@ -19,8 +19,7 @@
     color: #fff;
   }
   &-ja {
-    font-family: "Yu Gothic", "Helvetica Neue", "Helvetica", "Hiragino Sans",
-      "Hiragino Kaku Gothic ProN", "Arial", "Meiryo", sans-serif;
+    font-family: "游ゴシック体", YuGothic, "游ゴシック Medium", "Yu Gothic Medium", "游ゴシック", "Yu Gothic", sans-serif;
     font-weight: bold;
   }
 }
