--- a/scss/layout/_access.scss
+++ b/scss/layout/_access.scss
@@ -74,6 +74,7 @@
         a {
           margin-top: 20px;
           text-decoration: underline;
+          font-size: 16px;
           @include mq(sp) {
             font-size: 12px;
           }
